review(wi-132527): fix extra <a> styles that were causing wrong color on some pages

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -541,12 +541,12 @@ table tr th, table tr td
 /*********************** 2.1 404 Page *****************************/
 
 a:link, a:visited {
-	color: @color-tile-link;
+	color: @color-teal-link;
 	text-decoration: none;	
 }
 
 a:hover {
-	color: @color-tile-link;
+	color: @color-teal-link;
 	text-decoration: underline;	
 }
 
